이상하다 이상해
* IDE에서 실행하는 통합테스트와
* 그레이들에서 실행하는 통합테스트가 서로 다른 환경으로 테스트가 진행된다.

프로젝트 참조관계를 고려하여 각 프로젝트에 있는 속성파일을 읽어오는데 반해서

프로젝트 참조관계를 고려하지 않고 실행하는 프로젝트를 기준으로 하여 참조하는 것으로 보인다. 아흠...

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'org.springframework.boot' version '2.0.2.RELEASE'
 }
 
+def requiredIntegrationProjects = [project(":b-api"), project(":c-app")]
+
 group = 'io.honeymon.springboot'
 
 subprojects {
@@ -55,5 +57,40 @@ project(':c-app') {
 
         compile "org.springframework.boot:spring-boot-starter-web"
         compile "org.springframework.boot:spring-boot-starter-logging"
+    }
+}
+
+configure(requiredIntegrationProjects) {
+    sourceSets {
+        integrationTest {
+            java {
+                compileClasspath += main.output + test.output
+                runtimeClasspath += main.output + test.output
+                srcDir file('src/integration-test/java')
+            }
+            resources {
+                srcDir file('src/integration-test/resources')
+            }
+        }
+    }
+
+    configurations {
+        integrationTestCompile.extendsFrom testCompile
+        integrationTestRuntime.extendsFrom testRuntime
+    }
+
+    task integrationTest(type: Test) {
+        description = "Runs then integration tests."
+
+        testClassesDirs = sourceSets.integrationTest.output.classesDirs
+        classpath = sourceSets.integrationTest.runtimeClasspath
+    }
+
+    check.dependsOn integrationTest
+    integrationTest.mustRunAfter test
+
+
+    dependencies {
+        testCompile "org.springframework.boot:spring-boot-starter-test"
     }
 }
